--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,14 @@
         <Button
             android:id="@+id/retrofit"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="retrofittext"/>
+
+        <Button
+            android:id="@+id/aidl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="aidltest"/>
 
     </LinearLayout>
 
